# dult-my-cpu-2026

./: .clang-format  CMakeLists.txt  README.md  all_code_test.txt  code.txt
build_runtime/: quick-sort.dump  quick-sort.elf  test_add.dump  test_add.elf  test_check_fail.dump  test_check_fail.elf  test_fact.dump  test_fact.elf  test_fail_main.dump  test_fail_main.elf  test_fib.dump  test_fib.elf  test_if_else.dump  test_if_else.elf  test_main.dump  test_main.elf
include/: Bus.h  CPU.h  Device.h  Memory.h  PlatformConfig.h  ProgramLoader.h  SimulatorRunner.h  TestDevice.h  Timer.h  Uart.h  decoder.h
my_programs_c/: crc32.c
programs/: array_fail.hex  array_pass.hex  branch_fail.hex  branch_pass.hex  load_store_fail.hex  load_store_pass.hex  readme.md  test_add.c  test_exit.hex  test_fail.hex  test_fib.c  trap_fail.hex
runtime/: TRAP_PROTOCOL.md  linker.ld  readme.md  start.S  trap.c  trap.h
src/: Bus.cpp  CPU.cpp  Memory.cpp  ProgramLoader.cpp  SimulatorRunner.cpp  TestDevice.cpp  Timer.cpp  Uart.cpp  simulator_main.cpp
test_def/: readme.md
tests/program/: c_test_manifest.txt  program_test_manifest.txt  program_test_runner.cpp  test_check_fail.c  test_fail_main.c  test_main.c
tests/unit/: test_array_programs.cpp  test_branch_programs.cpp  test_bus.cpp  test_cpu_basic.cpp  test_cpu_state.cpp  test_framework.h  test_load_store_programs.cpp  test_memory.cpp  test_mmu.cpp  test_program_loader.cpp  test_program_loader_bin.cpp  test_runtime_halt.cpp  test_runtime_loop.cpp  test_runtime_protocol.cpp  (+5 more)
toolchain/: build_c_program.sh  build_test_main.sh  run_c_tests.sh
